# CareerPilot-AI

./: .replit  pnpm-lock.yaml  pyproject.toml
.agents/memory/: MEMORY.md  gemini-json-parsing.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/careerpilot/: package.json
artifacts/careerpilot/.replit-artifact/: artifact.toml
careerpilot-ai/: .env.example  .gitignore  Dockerfile  README.md  apprunner.yaml  docker-compose.yml  requirements.txt
careerpilot-ai/backend/: main.py
careerpilot-ai/backend/models/: schemas.py
careerpilot-ai/backend/prompts/: analysis_prompt.py  cover_letter_prompt.py  linkedin_prompt.py
careerpilot-ai/backend/routers/: analyze.py  health.py
careerpilot-ai/backend/services/: gemini_service.py  pdf_extractor.py
careerpilot-ai/frontend/: index.html
careerpilot-ai/frontend/css/: animations.css  components.css  dashboard.css  style.css
careerpilot-ai/frontend/js/: app.js  ats_ring.js  cover_letter.js  dashboard.js  linkedin.js  stream.js  upload.js
careerpilot-ai/tests/: test_json_parser.py  test_live_api.py  test_targeted.py
