[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]
